--- a/index.html
+++ b/index.html
@@ -153,13 +153,13 @@
             'error', loadErrHandler, true /* capture phase type of listener */);
     </script>
     <script src="https://meet.jit.si/config.js"></script>
-    <script src="https://rawcdn.githack.com/maxired/myjitsi/master/config.js"></script>
+    <script src="https://4hab-fr.github.io/meet/config.js"></script>
     <script src="libs/external_connect.js?v=1"></script>
 
     <script src="libs/do_external_connect.min.js?v=1"></script>
     <script src="interface_config.js"></script>
    
-    <script src="https://rawcdn.githack.com/maxired/myjitsi/master/interface_config.js"></script>
+    <script src="https://4hab-fr.github.io/meet/interface_config.js"></script>
    
     <script>/* eslint-disable no-unused-vars, no-var */
 
